k8s/elastic/elastic-service.yml
apiVersion: v1
kind: Service
metadata:
  name: elastic-service
spec:
  selector:
    app: elastic
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
